--- a/index.html
+++ b/index.html
@@ -3,25 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Development Setup</title>
+    <title>2D Brick-Breaking Game</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
+            font-family: Arial, sans-serif;
         }
         canvas {
             display: block;
+        }
+        #controls-info {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: rgba(255, 255, 255, 0.4);
+            font-size: 12px;
+            text-align: right;
+            pointer-events: none;
         }
     </style>
 </head>
 <body>
     <!-- Three.js will render in this container -->
-    <div id="scene-container"></div>
+    <div id="game-container"></div>
+    
+    <!-- Subtle control info -->
+    <div id="controls-info">← → to move ball • Mouse to move platform • Click to reset</div>
 
     <!-- Import Three.js from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
     
     <!-- Import our modular JS code -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
