--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <!-- Three.js will render in this container -->
     <div id="scene-container"></div>
 
-    <!-- Import Three.js from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-    
-    <!-- Import our modular JS code -->
+    <!-- Using ES modules with Vite -->
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
